<resources>
    <string name="app_name">Share My Book</string>
    <string name="title_home">Home</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="popular">Popular</string>
    <string name="recommended">For You</string>
    <string name="login">Login</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="new_user">New User ?</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="favorite">Favorite</string>
    <string name="splash">Splash</string>
    <string name="home">Home</string>
    <string name="agree">By Check You agree to the terms and conditions</string>
    <string name="rat">0.0</string>
    <string name="like_it">Like It</string>
    <string name="text_disc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Expetenda tincidunt in sed, ex partem placerat sea, porro commodo ex eam. His putant aeterno interesset at. Usu ea mundi tincidunt, omnium virtute aliquando ius ex. Ea aperiri sententiae duo. Usu nullam dolorum quaestio ei, sit vidit facilisis ea. Per ne impedit iracundia neglegentur. Consetetur neglegentur eum ut, vis animal legimus inimicus id. His audiam deserunt in, eum ubique voluptatibus te. In reque dicta usu. Ne rebum dissentiet eam, vim omnis deseruisse id. Ullum deleniti vituperata at quo, insolens complectitur te eos, ea pri dico munere propriae. Vel ferri facilis ut, qui paulo ridens praesent ad. Possim alterum qui cu. Accusamus consulatu ius te, cu decore soleat appareat usu. Est ei erat mucius quaeque. Ei his quas phaedrum, efficiantur mediocritatem ne sed, hinc oratio blandit ei sed. Blandit gloriatur eam et. Brute noluisse per et, verear disputando neglegentur at quo. Sea quem legere ei, unum soluta ne duo. Ludus complectitur quo te, ut vide autem homero pro. Vis id minim dicant sensibus. Pri aliquip conclusionemque ad, ad malis evertitur torquatos his. Has ei solum harum reprimique, id illum saperet tractatos his. Ei omnis soleat antiopam quo. Ad augue inani postulant mel, mel ea qualisque forensibus. Lorem salutandi eu mea, eam in soleat iriure assentior. Tamquam lobortis id qui. Ea sanctus democritum mei, per eu alterum electram adversarium. Ea vix probo dicta iuvaret, posse epicurei suavitate eam an, nam et vidit menandri. Ut his accusata petentium.</string>
    <string name="book_description">Description</string>
    <string name="book_comments">Comments</string>
    <string name="add_comment">Add Comment</string>
    <string name="required">Required</string>

    <string name="invalidPhone">Please enter a valid phone number</string>

    <string name="invalidPassword">Please enter a valid password</string>

    <string name="wrongPassword">Wrong Password</string>

    <string name="wrongPhone">Wrong Phone</string>
    <string name="wrongPhoneSign">Already User Phone</string>
    <string name="user_interests">User Interests</string>
    <string name="congratsLogin">Congratulations, you have been added successfully. Please log in to activate the membership. Thank you</string>
    <string name="congrats">\"Congrats\"</string>
    <string name="email">Email</string>
    <string name="invalidName">Please Enter Valid Name</string>
    <string name="invalidEmail">Please Enter Valid Email</string>
    <string name="categories">Categories</string>
    <string name="catBooks">Category Books</string>


</resources>