<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kOpenGray"
    tools:context=".ui.fragment.favorite.FavoriteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_login_wave"
        android:backgroundTint="@color/kPrimary">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/kPrimaryVariant"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/gh1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:alpha=".1"
            android:scaleX="2.5"
            android:scaleY="2.5"
            android:src="@drawable/ic_buble"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="?attr/actionBarSize"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="?attr/actionBarSize"
            android:padding="16dp"
            android:src="@drawable/ic_h_logo"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/gh1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:alpha=".15"
            android:scaleX="1.25"
            android:scaleY="1.25"
            android:src="@drawable/ic_buble"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/loginCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:rotation="180"
            android:alpha=".15"
            android:scaleX="1.25"
            android:scaleY="1.25"
            android:src="@drawable/ic_buble"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/loginCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/loginCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="?attr/actionBarSize"
            android:layout_marginEnd="?attr/actionBarSize"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="32dp"
            app:cardElevation="?attr/actionBarSize"
            app:layout_constraintBottom_toBottomOf="@id/gh2"
            app:layout_constraintTop_toTopOf="@id/gh1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="?attr/actionBarSize"
                android:paddingBottom="?attr/actionBarSize">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/kPrimary"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/getPhone"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                   android:layout_margin="32dp"
                    android:autofillHints="phone"
                    android:background="@drawable/all_curve"
                    android:backgroundTint="@color/kOpenGray"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/kGray"

                    app:layout_constraintTop_toBottomOf="@id/title" />

                <EditText
                    android:id="@+id/getPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="32dp"
                    android:autofillHints="password"
                    android:background="@drawable/all_curve"
                    android:backgroundTint="@color/kOpenGray"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/kGray"
                    app:layout_constraintTop_toBottomOf="@id/getPhone" />

                <Button

                    android:id="@+id/okLogin"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="48dp"
                    android:autofillHints="password"
                    android:background="@drawable/all_curve"
                    android:backgroundTint="@color/kOpenGray"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="@string/login"
                    android:textColorHint="@color/kGray"
                    app:layout_constraintTop_toBottomOf="@id/getPassword" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@id/okLogin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_user"
                        android:textColor="@color/kGray" />

                    <TextView
                        android:id="@+id/goToSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/signup"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/kPrimaryVariant"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gh1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gh2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>