<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kOpenGray"
    tools:context=".ui.fragment.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sliderContainer"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bottom_curve_back"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/sliderView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/sliderView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tabBackground="@drawable/tab_color_selector" />


            <ProgressBar
                android:id="@+id/slider_loader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/kPrimaryVariant"
                android:progressTint="@color/kPrimaryVariant"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/categoryContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/sliderContainer">

            <TextView
                android:id="@+id/cat_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/category"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/kPrimaryVariant"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/catRecycler"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintTop_toBottomOf="@id/cat_title" />

            <ProgressBar
                android:id="@+id/cat_loader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/kPrimaryVariant"
                android:progressTint="@color/kPrimaryVariant"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pppContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/top_curve"
            android:backgroundTint="@color/white"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/categoryContainer">

            <TextView
                android:id="@+id/pop_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/popular"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/kPrimaryVariant"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/pop_loader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:indeterminateTint="@color/kPrimaryVariant"
                android:progressTint="@color/kPrimaryVariant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pop_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularRecycler"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/pop_title" />

            <TextView
                android:id="@+id/recommended_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/recommended"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/kPrimaryVariant"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/popularRecycler" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommendedRecycler"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/recommended_title" />

            <ProgressBar
                android:id="@+id/recommended_loader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:indeterminateTint="@color/kPrimaryVariant"
                android:progressTint="@color/kPrimaryVariant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recommended_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>